--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -120,7 +120,10 @@ jobs:
           ls -lha
           
           # move multiple coverage file to separate folder
-          mkdir -p cov; mv .coverage.* cov/
+          mkdir -p cov
+          if compgen -G ".coverage.*" > /dev/null; then
+            mv .coverage.* cov/
+          fi
 
 #       Uploading test artifacts
 #       https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
