--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -158,9 +158,20 @@ jobs:
           set -x # print commands that are executed
           
           pip install coverage
-          coverage combine cov-xml-report-unitary/cov/* cov-xml-report-model/cov/*
+          if compgen -G "cov-xml-report-jobs/cov/.coverage.*" > /dev/null; then
+            mv cov-xml-report-jobs/cov/.coverage.* .
+          fi
+          if compgen -G "cov-xml-report-feature_types/cov/.coverage.*" > /dev/null; then
+            mv cov-xml-report-feature_types/cov/.coverage.* .
+          fi
           ls -lha
-          coverage html
+          if compgen -G ".coverage.*" > /dev/null; then
+            echo "Make combined coverage html report"
+            coverage combine
+            coverage html
+          else
+            echo "No coverage files to combine. No html report will be produced.
+          fi 
 
       - name: "Calculate coverage diff"
         run: |
@@ -172,8 +183,8 @@ jobs:
           
           # Prepare file paths to coverage xml files
           # Filenames taken from job.test last step with name - "Save coverage files"
-          FILE1="cov-xml-report-unitary/cov-unitary.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-xml-report-model/cov-model.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-xml-report-jobs/cov-jobs.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-xml-report-feature_types/cov-feature_types.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
