--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -38,23 +38,23 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8"]
-        # test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
-        test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
-        include:
-          - test-path: "tests/unitary/default_setup/jobs"
-            name: "jobs"
-          - test-path: "tests/unitary/default_setup/feature_types"
-            name: "feature_types"
-          - python-version: "3.8"
-            cov-xml-report: --cov= --cov-append --cov-report=xml
+        test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
+        #test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
 #        include:
-#          - test-path: "tests/unitary"
-#            ignore-path: "tests/unitary/with_extras/model"
-#            name: "unitary"
-#          - test-path: "tests/unitary/with_extras/model"
-#            name: "model"
+#          - test-path: "tests/unitary/default_setup/jobs"
+#            name: "jobs"
+#          - test-path: "tests/unitary/default_setup/feature_types"
+#            name: "feature_types"
 #          - python-version: "3.8"
-#            cov-xml-report: --cov=ads --cov-report=xml
+#            cov-xml-report: --cov= --cov-append --cov-report=xml
+        include:
+          - test-path: "tests/unitary"
+            ignore-path: "tests/unitary/with_extras/model"
+            name: "unitary"
+          - test-path: "tests/unitary/with_extras/model"
+            name: "model"
+          - python-version: "3.8"
+            cov-xml-report: --cov=ads --cov-append --cov-report=xml
 
     steps:
       - uses: actions/checkout@v3
@@ -96,10 +96,10 @@ jobs:
         shell: bash
         run: |
           set -x # print commands that are executed
-          # sudo apt-get install libkrb5-dev graphviz
+          sudo apt-get install libkrb5-dev graphviz
           $CONDA/bin/conda init
           source /home/runner/.bashrc
-          pip install -r test-requirements.txt
+          pip install -r dev-requirements.txt
 
       - name: "Run unitary tests folder with maximum ADS dependencies"
         timeout-minutes: 60
@@ -181,8 +181,8 @@ jobs:
           
           # Prepare file paths to coverage xml files
           # Filenames taken from job.test last step with name - "Save coverage files"
-          FILE1="cov-xml-report-jobs/cov-jobs.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-xml-report-feature_types/cov-feature_types.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-xml-report-unitary/cov-unitary.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-xml-report-model/cov-model.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
