--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -38,23 +38,24 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8"]
-        test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
+        #test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
         #test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
-#        include:
-#          - test-path: "tests/unitary/default_setup/jobs"
-#            name: "jobs"
+        test-path: ["tests/unitary/default_setup/jobs"]
+        include:
+          - test-path: "tests/unitary/default_setup/jobs"
+            name: "jobs"
 #          - test-path: "tests/unitary/default_setup/feature_types"
 #            name: "feature_types"
-#          - python-version: "3.8"
-#            cov-xml-report: --cov= --cov-append --cov-report=xml
-        include:
-          - test-path: "tests/unitary"
-            ignore-path: "tests/unitary/with_extras/model"
-            name: "unitary"
-          - test-path: "tests/unitary/with_extras/model"
-            name: "model"
           - python-version: "3.8"
-            cov-xml-report: --cov=ads --cov-append --cov-report=xml
+            cov-xml-report: --cov= --cov-report=xml
+#        include:
+#          - test-path: "tests/unitary"
+#            ignore-path: "tests/unitary/with_extras/model"
+#            name: "unitary"
+#          - test-path: "tests/unitary/with_extras/model"
+#            name: "model"
+#          - python-version: "3.8"
+#            cov-xml-report: --cov=ads --cov-report=xml
 
     steps:
       - uses: actions/checkout@v3
@@ -121,6 +122,7 @@ jobs:
           # move multiple coverage file to separate folder
           mkdir -p cov
           if compgen -G ".coverage.*" > /dev/null; then
+            mv .coverage cov/
             mv .coverage.* cov/
           fi
 
