--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -38,24 +38,24 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ["3.8"]
-        #test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
-        test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
+        test-path: ["tests/unitary", "tests/unitary/with_extras/model"]
+        #test-path: ["tests/unitary/default_setup/jobs", "tests/unitary/default_setup/feature_types"]
         #test-path: ["tests/unitary/default_setup/jobs"]
+#        include:
+#          - test-path: "tests/unitary/default_setup/jobs"
+#            name: "jobs"
+#          - test-path: "tests/unitary/default_setup/feature_types"
+#            name: "feature_types"
+#          - python-version: "3.8"
+#            cov-reports: --cov=ads --cov-report=xml --cov-report=html
         include:
-          - test-path: "tests/unitary/default_setup/jobs"
-            name: "jobs"
-          - test-path: "tests/unitary/default_setup/feature_types"
-            name: "feature_types"
+          - test-path: "tests/unitary"
+            ignore-path: "tests/unitary/with_extras/model"
+            name: "unitary"
+          - test-path: "tests/unitary/with_extras/model"
+            name: "model"
           - python-version: "3.8"
             cov-reports: --cov=ads --cov-report=xml --cov-report=html
-#        include:
-#          - test-path: "tests/unitary"
-#            ignore-path: "tests/unitary/with_extras/model"
-#            name: "unitary"
-#          - test-path: "tests/unitary/with_extras/model"
-#            name: "model"
-#          - python-version: "3.8"
-#            cov-reports: --cov=ads --cov-report=xml
 
     steps:
       - uses: actions/checkout@v3
@@ -97,10 +97,10 @@ jobs:
         shell: bash
         run: |
           set -x # print commands that are executed
-          # sudo apt-get install libkrb5-dev graphviz
+          sudo apt-get install libkrb5-dev graphviz
           $CONDA/bin/conda init
           source /home/runner/.bashrc
-          pip install -r test-requirements.txt
+          pip install -r dev-requirements.txt
 
       - name: "Run unitary tests folder with maximum ADS dependencies"
         timeout-minutes: 60
@@ -108,7 +108,6 @@ jobs:
         env:
           NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
           CONDA_PREFIX: /usr/share/miniconda
-          NoDependency: True
         run: |
           set -x # print commands that are executed
           
@@ -164,11 +163,12 @@ jobs:
           
           # Prepare default cov body text 
           COV_BODY_INTRO="📌 Overall coverage:\n\n"
-          COV_BODY="$COV_BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
+          echo COV_BODY="$COV_BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
           
           # Combine coverage files
           pip install coverage
-          coverage combine cov-reports-jobs/.coverage cov-reports-feature_types/.coverage
+          coverage combine cov-reports-unitary/.coverage cov-reports-model/.coverage
+          coverage report
           
           # Calculate overall coverage and update body message
           COV=$(coverage report | grep TOTAL | grep -Eo '\d+\.\d*')
@@ -186,12 +186,12 @@ jobs:
           
           # Prepare default diff body text 
           DIFF_BODY_INTRO="📌 Cov diff with **${{ env.COMPARE_BRANCH }}**:\n\n"
-          DIFF_BODY="$BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
+          echo DIFF_BODY="$BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
           
           # Prepare file paths to coverage xml files
           # Filenames taken from job.test last step with name - "Save coverage files"
-          FILE1="cov-reports-jobs/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-reports-feature_types/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-reports-unitary/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-reports-model/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
@@ -229,7 +229,7 @@ jobs:
       - name: "Save coverage difference report"
         uses: actions/upload-artifact@v3
         with:
-          name: coverage-html-reports
+          name: cov-html-reports
           path: |
             cov-diff.html
             htmlcov/
