--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -168,19 +168,19 @@ jobs:
           # Combine coverage files
           pip install coverage
           coverage combine cov-reports-unitary/.coverage cov-reports-model/.coverage
-          coverage report
+          
+          # Make html report
+          coverage html
           
           # Calculate overall coverage and update body message
-          COV=$(coverage report | grep TOTAL | grep -Eo '\d+\.\d*')
+          COV=$(grep -E 'pc_cov' htmlcov/index.html | cut -d'>' -f 2 | cut -d'%' -f 1)
           if [[ ! -z $COV ]]; then 
             if [[ $COV < 50 ]]; then COLOR=red; elif [[ $COV < 80 ]]; then COLOR=yellow; else COLOR=green; fi
             echo COV_BODY="$COV_BODY_INTRO ![Coverage-$COV%](https://img.shields.io/badge/coverage-$COV%25-$COLOR)" >> $GITHUB_ENV
           fi
-          
-          # Make html report
-          coverage html
 
       - name: "Calculate coverage diff"
+        if: always()
         run: |
           set -x # print commands that are executed
           
