--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -46,7 +46,7 @@ jobs:
           - test-path: "tests/unitary/with_extras/model"
             name: "model"
           - python-version: "3.8"
-            cov-xml-report: --cov=ads --cov-report=xml
+            cov-reports: --cov=ads --cov-report=xml --cov-report=html
 
     steps:
       - uses: actions/checkout@v3
@@ -101,26 +101,36 @@ jobs:
         env:
           NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
           CONDA_PREFIX: /usr/share/miniconda
-          NoDependency: True
         run: |
           set -x # print commands that are executed
-          [[ -z "${{ matrix.cov-xml-report }}" ]] || COV_REPORT_NAME=:cov-${{ matrix.name }}.xml
           
+          # Setup project and tests folder for cov reports to not be overwritten by another parallel step
+          if [[ ! -z "${{ matrix.cov-reports }}" ]]; then
+            mkdir -p cov-${{ matrix.name }}
+            cd cov-${{ matrix.name }}
+            ln -s ../tests tests
+            ln -s ../ads ads
+            ln -s ../.coveragerc .coveragerc
+          fi
+          
+          # Run tests
           python -m pytest -v -p no:warnings --durations=5 \
-          -n auto --dist loadfile ${{ matrix.cov-xml-report }}$COV_REPORT_NAME \
+          -n auto --dist loadfile ${{ matrix.cov-reports }} \
           ${{ matrix.test-path }} \
           --ignore "${{ matrix.ignore-path }}"
 
       - name: "Save coverage files"
         uses: actions/upload-artifact@v3
-        if: ${{ matrix.cov-xml-report }}
+        if: ${{ matrix.cov-reports }}
         with:
-          name: cov-xml-report-${{ matrix.name }}
+          name: cov-reports-${{ matrix.name }}
           path: |
-            cov-${{ matrix.name }}.xml
+            cov-${{ matrix.name }}/htmlcov/
+            cov-${{ matrix.name }}/.coverage
+            cov-${{ matrix.name }}/coverage.xml
 
   coverage-report:
-    name: "Coverage reports"
+    name: "Coverage report"
     runs-on: ubuntu-latest
     continue-on-error: true
     needs: test
@@ -135,18 +145,41 @@ jobs:
           fetch-depth: 0
       - name: "Download coverage files"
         uses: actions/download-artifact@v3
-      - name: "Calculate coverage diff"
+      - name: "Calculate overall coverage"
         run: |
           set -x # print commands that are executed
           
-          # Prepare default body text 
-          BODY_INTRO=":checkered_flag: Cov diff with **${{ env.COMPARE_BRANCH }}**:\n\n"
-          BODY="$BODY_INTRO *No success to gather report.*"
+          # Prepare default cov body text 
+          COV_BODY_INTRO="📌 Overall coverage:\n\n"
+          echo COV_BODY="$COV_BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
+          
+          # Combine coverage files
+          pip install coverage
+          coverage combine cov-reports-unitary/.coverage cov-reports-model/.coverage
+          
+          # Make html report
+          coverage html
+          
+          # Calculate overall coverage and update body message
+          COV=$(grep -E 'pc_cov' htmlcov/index.html | cut -d'>' -f 2 | cut -d'%' -f 1)
+          if [[ ! -z $COV ]]; then 
+            if [[ $COV < 50 ]]; then COLOR=red; elif [[ $COV < 80 ]]; then COLOR=yellow; else COLOR=green; fi
+            echo COV_BODY="$COV_BODY_INTRO ![Coverage-$COV%](https://img.shields.io/badge/coverage-$COV%25-$COLOR)" >> $GITHUB_ENV
+          fi
+
+      - name: "Calculate coverage diff"
+        if: always()
+        run: |
+          set -x # print commands that are executed
+          
+          # Prepare default diff body text 
+          DIFF_BODY_INTRO="📌 Cov diff with **${{ env.COMPARE_BRANCH }}**:\n\n"
+          echo DIFF_BODY="$BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
           
           # Prepare file paths to coverage xml files
           # Filenames taken from job.test last step with name - "Save coverage files"
-          FILE1="cov-xml-report-unitary/cov-unitary.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
-          FILE2="cov-xml-report-model/cov-model.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          FILE1="cov-reports-unitary/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-reports-model/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
           echo "FILE1=$FILE1" >> $GITHUB_ENV
           echo "FILE2=$FILE2" >> $GITHUB_ENV
           
@@ -158,10 +191,10 @@ jobs:
           if [[ -z $DIFF ]]; then 
             DIFF_INFO=$(diff-cover $FILE1 $FILE2 \
               --compare-branch=origin/${{ env.COMPARE_BRANCH }}  | grep "No lines");
-            echo BODY="$BODY_INTRO *$DIFF_INFO*">> $GITHUB_ENV
+            echo DIFF_BODY="$DIFF_BODY_INTRO $DIFF_INFO">> $GITHUB_ENV
           else
-            if [[ $DIFF < 80 ]]; then COLOR=red; else COLOR=green; fi
-            echo BODY="$BODY_INTRO ![Coverage-$DIFF%](https://img.shields.io/badge/coverage-$DIFF%25-$COLOR)" >> $GITHUB_ENV
+            if [[ $DIFF < 50 ]]; then COLOR=red; elif [[ $DIFF < 80 ]]; then COLOR=yellow; else COLOR=green; fi
+            echo DIFF_BODY="$DIFF_BODY_INTRO ![Coverage-$DIFF%](https://img.shields.io/badge/coverage-$DIFF%25-$COLOR)" >> $GITHUB_ENV
           fi
 
       - name: "Add comment with cov diff to PR"
@@ -174,7 +207,7 @@ jobs:
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
-              body: '${{ env.BODY }}'
+              body: '${{ env.DIFF_BODY }}\n\n${{ env.COV_BODY }}'
             })
       - name: "Generate html difference report"
         run: |
@@ -184,6 +217,8 @@ jobs:
       - name: "Save coverage difference report"
         uses: actions/upload-artifact@v3
         with:
-          name: html-report
-          path: cov-diff.html
+          name: cov-html-reports
+          path: |
+            cov-diff.html
+            htmlcov/
           retention-days: 10
