--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -22,6 +22,7 @@ concurrency:
 
 permissions:
   contents: read
+  pull-requests: write
 
 # hack for https://github.com/actions/cache/issues/810#issuecomment-1222550359
 env:
@@ -29,7 +30,7 @@ env:
 
 jobs:
   test:
-    name: python ${{ matrix.python-version }}, ${{ matrix.test-path }}, ignore ${{ matrix.ignore-path }}
+    name: python ${{ matrix.python-version }}, ${{ matrix.name }}
     runs-on: ubuntu-latest
     timeout-minutes: 90
 
@@ -41,6 +42,11 @@ jobs:
         include:
           - test-path: "tests/unitary"
             ignore-path: "tests/unitary/with_extras/model"
+            name: "unitary"
+          - test-path: "tests/unitary/with_extras/model"
+            name: "model"
+          - python-version: "3.8"
+            cov-reports: --cov=ads --cov-report=xml --cov-report=html
 
     steps:
       - uses: actions/checkout@v3
@@ -82,10 +88,11 @@ jobs:
         shell: bash
         run: |
           set -x # print commands that are executed
+          
           sudo apt-get install libkrb5-dev graphviz
           $CONDA/bin/conda init
           source /home/runner/.bashrc
-          pip install setuptools
+          
           pip install -r dev-requirements.txt
 
       - name: "Run unitary tests folder with maximum ADS dependencies"
@@ -95,16 +102,123 @@ jobs:
           NB_SESSION_COMPARTMENT_OCID: ocid1.compartment.oc1.<unique_ocid>
           CONDA_PREFIX: /usr/share/miniconda
         run: |
+          set -x # print commands that are executed
+          
+          # Setup project and tests folder for cov reports to not be overwritten by another parallel step
+          if [[ ! -z "${{ matrix.cov-reports }}" ]]; then
+            mkdir -p cov-${{ matrix.name }}
+            cd cov-${{ matrix.name }}
+            ln -s ../tests tests
+            ln -s ../ads ads
+            ln -s ../.coveragerc .coveragerc
+          fi
+          
+          # Run tests
           python -m pytest -v -p no:warnings --durations=5 \
+          -n auto --dist loadfile ${{ matrix.cov-reports }} \
           ${{ matrix.test-path }} \
-          --ignore "${{ matrix.ignore-path }}" \
-          --cov --cov-append --cov-report=html
+          --ignore "${{ matrix.ignore-path }}"
 
-#       Uploading test artifacts
-#       https://docs.github.com/en/actions/using-workflows/storing-workflow-data-as-artifacts#uploading-build-and-test-artifacts
-      - name: "Save html coverage report"
+      - name: "Save coverage files"
+        uses: actions/upload-artifact@v3
+        if: ${{ matrix.cov-reports }}
+        with:
+          name: cov-reports-${{ matrix.name }}
+          path: |
+            cov-${{ matrix.name }}/htmlcov/
+            cov-${{ matrix.name }}/.coverage
+            cov-${{ matrix.name }}/coverage.xml
+
+  coverage-report:
+    name: "Coverage report"
+    runs-on: ubuntu-latest
+    continue-on-error: true
+    needs: test
+    if: ${{ success() }} && ${{ github.event.issue.pull_request }}
+    env:
+      COMPARE_BRANCH: develop
+
+    steps:
+      - name: "Checkout current branch"
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: "Download coverage files"
+        uses: actions/download-artifact@v3
+      - name: "Calculate overall coverage"
+        run: |
+          set -x # print commands that are executed
+          
+          # Prepare default cov body text 
+          COV_BODY_INTRO="📌 Overall coverage:\n\n"
+          echo COV_BODY="$COV_BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
+          
+          # Combine coverage files
+          pip install coverage
+          coverage combine cov-reports-unitary/.coverage cov-reports-model/.coverage
+          
+          # Make html report
+          coverage html
+          
+          # Calculate overall coverage and update body message
+          COV=$(grep -E 'pc_cov' htmlcov/index.html | cut -d'>' -f 2 | cut -d'%' -f 1)
+          if [[ ! -z $COV ]]; then 
+            if [[ $COV < 50 ]]; then COLOR=red; elif [[ $COV < 80 ]]; then COLOR=yellow; else COLOR=green; fi
+            echo COV_BODY="$COV_BODY_INTRO ![Coverage-$COV%](https://img.shields.io/badge/coverage-$COV%25-$COLOR)" >> $GITHUB_ENV
+          fi
+
+      - name: "Calculate coverage diff"
+        if: always()
+        run: |
+          set -x # print commands that are executed
+          
+          # Prepare default diff body text 
+          DIFF_BODY_INTRO="📌 Cov diff with **${{ env.COMPARE_BRANCH }}**:\n\n"
+          echo DIFF_BODY="$BODY_INTRO No success to gather report. 😿" >> $GITHUB_ENV
+          
+          # Prepare file paths to coverage xml files
+          # Filenames taken from job.test last step with name - "Save coverage files"
+          FILE1="cov-reports-unitary/coverage.xml"; [[ ! -f $FILE1 ]] && FILE1="" 
+          FILE2="cov-reports-model/coverage.xml"; [[ ! -f $FILE2 ]] && FILE2=""
+          echo "FILE1=$FILE1" >> $GITHUB_ENV
+          echo "FILE2=$FILE2" >> $GITHUB_ENV
+          
+          # Calculate coverage diff and update body message
+          pip install diff_cover
+          diff-cover $FILE1 $FILE2 --compare-branch=origin/${{ env.COMPARE_BRANCH }} 
+          DIFF=$(diff-cover $FILE1 $FILE2 \
+            --compare-branch=origin/${{ env.COMPARE_BRANCH }} | grep Coverage: | cut -d' ' -f 2 | cut -d'%' -f 1)
+          if [[ -z $DIFF ]]; then 
+            DIFF_INFO=$(diff-cover $FILE1 $FILE2 \
+              --compare-branch=origin/${{ env.COMPARE_BRANCH }}  | grep "No lines");
+            echo DIFF_BODY="$DIFF_BODY_INTRO $DIFF_INFO">> $GITHUB_ENV
+          else
+            if [[ $DIFF < 50 ]]; then COLOR=red; elif [[ $DIFF < 80 ]]; then COLOR=yellow; else COLOR=green; fi
+            echo DIFF_BODY="$DIFF_BODY_INTRO ![Coverage-$DIFF%](https://img.shields.io/badge/coverage-$DIFF%25-$COLOR)" >> $GITHUB_ENV
+          fi
+
+      - name: "Add comment with cov diff to PR"
+        uses: actions/github-script@v6
+        if: always()
+        with:
+          github-token: ${{ github.token }}
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.issue.number,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: '${{ env.DIFF_BODY }}\n\n${{ env.COV_BODY }}'
+            })
+      - name: "Generate html difference report"
+        run: |
+          diff-cover ${{ env.FILE1 }} ${{ env.FILE2 }} \
+          --compare-branch=origin/${{ env.COMPARE_BRANCH }} \
+          --html-report=cov-diff.html
+      - name: "Save coverage difference report"
         uses: actions/upload-artifact@v3
         with:
-          name: code-coverage-report
-          path: htmlcov/
+          name: cov-html-reports
+          path: |
+            cov-diff.html
+            htmlcov/
           retention-days: 10
