fix up theme work for docs

--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,11 +2,10 @@ autodoc
 nbsphinx
 sphinx
 sphinxcontrib-napoleon
-sphinx-rtd-theme
 sphinx_copybutton
 sphinx_code_tabs
 sphinx-autobuild
-sphinx-design
+sphinx-autorun
 oracle_ads
 furo
 IPython
