--- a/.github/workflows/publish-to-readthedocs.yml
+++ b/.github/workflows/publish-to-readthedocs.yml
@@ -21,7 +21,7 @@ jobs:
 
     steps:
       - name: When PR ✅ merged - Trigger Readthedocs build
-        if: github.event.pull_request.merged == true
+        if: github.event_name == 'pull_request_target' && github.event.pull_request.merged == true
         env:
           RTDS_ADS_PROJECT: https://readthedocs.org/api/v3/projects/accelerated-data-science
           RTDS_ADS_TOKEN: ${{ secrets.RTDS_ADS_TOKEN }}
@@ -30,7 +30,7 @@ jobs:
             -X POST \
             -H "Authorization: Token $RTDS_ADS_TOKEN" $RTDS_ADS_PROJECT/versions/latest/builds/
       - name: When tag 🏷️ pushed - Trigger Readthedocs build
-        if: github.event_name != 'pull_request'
+        if: github.event_name == 'push' && startsWith(github.ref_name, 'v')
         env:
           RTDS_ADS_PROJECT: https://readthedocs.org/api/v3/projects/accelerated-data-science
           RTDS_ADS_TOKEN: ${{ secrets.RTDS_ADS_TOKEN }}
