--- a/tests/unitary/with_extras/opctl/test_files/job_gitPython.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/job_gitPython.yaml
@@ -2,6 +2,7 @@
 # The more details about the jobs YAML specification can be found in the ADS documentation:
 # https://accelerated-data-science.readthedocs.io/en/latest/user_guide/jobs/index.html 
 
+
 kind: job
 spec:
   infrastructure:
@@ -17,18 +18,18 @@ spec:
       shapeName: VM.Standard2.1
       subnetId: ocid1.subnet.oc1.iad.<unique_id>
     type: dataScienceJob
-  name: '{Job name. For the MLFlow will be auto replaced with the Project name}'
+  name: '{Job name. For MLflow, it will be replaced with the Project name}'
   runtime:
     kind: runtime
     spec:
       conda:
         type: published
-        uri: oci://your_bucket@namespace/object_name
-      entrypoint: '{Entry point script. For the MLflow will be replaced with the CMD}'
+        uri: '{Path to the custom conda environment. Example: oci://your_bucket@namespace/object_name'
+      entrypoint: '{Entrypoint script. For MLflow, it will be replaced with the CMD}'
       env:
       - name: env_name
         value: env_value
       freeformTags:
         tag_name: tag_value
-      url: '{Git URI. For the MLFlow will be replaced with the Project URI}'
+      url: '{Git URI. For MLflow, it will be replaced with the Project URI}'
     type: gitPython
