--- a/tests/unitary/with_extras/opctl/test_files/pipeline_container.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/pipeline_container.yaml
@@ -2,6 +2,7 @@
 # The more details about the jobs YAML specification can be found in the ADS documentation:
 # https://accelerated-data-science.readthedocs.io/en/latest/user_guide/pipeline/quick_start.html
 
+
 kind: pipeline
 spec:
   compartmentId: ocid1.compartment.oc1..<unique_id>
@@ -21,6 +22,7 @@ spec:
           blockStorageSize: 50
           compartmentId: ocid1.compartment.oc1..<unique_id>
           projectId: ocid1.datascienceproject.oc1.<unique_id>
+          subnetId: '{Provide a subnet OCID}'
       name: pipeline_step_name_1
       runtime:
         kind: runtime
@@ -28,7 +30,7 @@ spec:
           args:
           - --key1
           - val1
-          cmd: '{Container CMD. For the MLflow will be replaced with the Project CMD}'
+          cmd: '{Container CMD. For MLFlow, it will be replaced with the Project CMD}'
           entrypoint:
           - bash
           - --login
