--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,11 +2,12 @@ autodoc
 nbsphinx
 sphinx
 sphinxcontrib-napoleon
-sphinx-rtd-theme
 sphinx_copybutton
 sphinx_code_tabs
-oracle_ads
 sphinx-autobuild
+sphinx-autorun
+oracle_ads
+furo
 IPython
 pandoc
 rstcheck
