--- a/.github/workflows/run-unittests.yml
+++ b/.github/workflows/run-unittests.yml
@@ -8,6 +8,7 @@ on:
       - develop
     paths:
       - "ads/**"
+      - "!ads/ads_version.json"
       - setup.py
       - "**requirements.txt"
       - .github/workflows/run-unittests.yml
