Adding feature store beta service

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
     -   id: check-json
     -   id: check-merge-conflict
     -   id: check-yaml
+        exclude: feature_store_*.yaml
         args: ['--allow-multiple-documents']
     -   id: detect-private-key
     -   id: end-of-file-fixer
