addressed review comments and enable sql transformation for YAML

--- a/ads/feature_store/templates/feature_store_template.yaml
+++ b/ads/feature_store/templates/feature_store_template.yaml
@@ -16,6 +16,7 @@ spec:
       spec:
         displayName: '{entity_name}'
 
+  # we can pass sql query in case of spark based sql transformations by passing query inline in transformationQueryInput
   transformation: &transformation
     - kind: transformation
       spec:
