--- a/tests/unitary/with_extras/opctl/test_files/dataflow_dataFlow.yaml
+++ b/tests/unitary/with_extras/opctl/test_files/dataflow_dataFlow.yaml
@@ -17,7 +17,7 @@ spec:
       scriptBucket: oci://bucket@namespace/prefix
       sparkVersion: 3.2.1
     type: dataFlow
-  name: '{Job name. For MLflow, it will be replaced with the Project name}'
+  name: '{Job name. For MLflow and Operator will be auto generated}'
   runtime:
     kind: runtime
     spec:
@@ -28,6 +28,5 @@ spec:
         tag_name: tag_value
       overwrite: true
       scriptBucket: '{The object storage bucket to save a script. Example: oci://<bucket_name>@<tenancy>/<prefix>}'
-      scriptPathURI: '{Path to the executable script. For MLflow, it will be replaced
-        with the CMD}'
+      scriptPathURI: '{Path to the executable script. For MLflow and Operator will be auto generated}'
     type: dataFlow
