--- a/ads/opctl/docker/operator/Dockerfile
+++ b/ads/opctl/docker/operator/Dockerfile
@@ -22,15 +22,15 @@ ENV PATH="/miniconda/envs/${CONDA_ENV_NAME}}/bin:$PATH"
 RUN conda init bash && source ~/.bashrc && conda activate ${CONDA_ENV_NAME}
 
 RUN mkdir ${OPERATOR_DIR}
-COPY ./artifacts/* ${OPERATOR_DIR}/
+# COPY ./artifacts/* ${OPERATOR_DIR}/
 
 ENV OPERATOR_DIR=${OPERATOR_DIR}
 ENV CONDA_ENV_NAME=${CONDA_ENV_NAME}
 
-RUN if [ -f ${OPERATOR_DIR}/oracle_ads*.whl ]; then \
-        local_whl=$(find ${OPERATOR_DIR} -name "*.whl" -exec basename {} \; | head -n 1 ); \
-        source ~/.bashrc && conda activate ${CONDA_ENV_NAME} && pip install ${OPERATOR_DIR}/$local_whl; \
-    fi
+# RUN if [ -f ${OPERATOR_DIR}/oracle_ads*.whl ]; then \
+#         local_whl=$(find ${OPERATOR_DIR} -name "*.whl" -exec basename {} \; | head -n 1 ); \
+#         source ~/.bashrc && conda activate ${CONDA_ENV_NAME} && pip install ${OPERATOR_DIR}/$local_whl; \
+#     fi
 
 WORKDIR ${OPERATOR_DIR}
 
