ODSC-44376. ADS release v2.8.8
- added release notes
- updated ADS version
- updated trigger for readthedocs documentation build

--- a/.github/workflows/publish-to-readthedocs.yml
+++ b/.github/workflows/publish-to-readthedocs.yml
@@ -1,7 +1,11 @@
 name: "Publish Docs"
 
 # To run this workflow manually from the Actions tab
-on: workflow_dispatch
+on:
+  # Auto-trigger this workflow on tag creation
+  push:
+    tags:
+      - 'v*.*.*'
 
 env:
   RTDS_ADS_PROJECT: https://readthedocs.org/api/v3/projects/accelerated-data-science
