--- a/ads/feature_store/docs/requirements.txt
+++ b/ads/feature_store/docs/requirements.txt
@@ -1,10 +1,15 @@
-sphinx
-nbsphinx
-pandoc
-ipython
-sphinx_rtd_theme
 autodoc
+nbsphinx
+sphinx
 sphinxcontrib-napoleon
-sphinx_code_tabs
 sphinx_copybutton
+sphinx_code_tabs
 sphinx-autobuild
+sphinx-autorun
+oracle_ads
+furo
+IPython
+pandoc
+rstcheck
+restructuredtext_lint
+doc8
